--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "author": "",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -25,6 +24,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.2.0",
     "mysql": "^2.18.1",
+    "njwt": "^1.2.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
