--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.2.0",
+    "ethers": "^5.5.4",
     "mysql": "^2.18.1",
     "njwt": "^1.2.0",
     "pg": "^8.7.1",
