--- a/package.json
+++ b/package.json
@@ -19,48 +19,26 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0",
-    "@nestjs/typeorm": "^6.2.0",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/typeorm": "^8.0.3",
     "ethers": "^5.5.4",
     "mysql": "^2.18.1",
     "njwt": "^1.2.0",
-    "pg": "^8.7.1",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "typeorm": "^0.2.22"
+    "pg": "^8.7.3",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.5.4",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.0.0",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/supertest": "2.0.7",
-    "jest": "24.7.1",
-    "nodemon": "^2.0.2",
-    "prettier": "1.17.0",
-    "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "^8.1.0",
-    "tsc-watch": "2.2.1",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.16",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.5.5"
   }
 }
