--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.2.6",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/typeorm": "^8.0.3",
