--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.2.6",
     "@nestjs/platform-express": "^8.2.6",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/typeorm": "^10.0.2",
     "ethers": "^5.5.4",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
     "njwt": "^1.2.0",
     "pg": "^8.7.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.4",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
